Fix padding and button alignment

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -11,17 +11,23 @@ body {
 
 .title {
   background: #e3f4ff;
+  padding: 14px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 14px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 14px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: auto;
 }
